test/pointer/fail/ptr_cl02.v3
//@execute (false, false)=true; (false, true)=false; (true, false)=false; (true, true)=true
component ptr_cl02 {
	def main(x: bool, y: bool) -> bool {
		var p: Pointer, q = p.add(1);
		var f = if(x, p.store<byte>, q.store<byte>);
		var g = if(y, p.store<byte>, q.store<byte>);
		return cmp(f, g);
	}
	def cmp(f: byte -> void, g: byte -> void) -> bool {
		return f == g;
	}
}
